# ai-screenshot-describer

./: Cargo.toml  README.md  img_to_ai.sh  openai_curl_example.sh  openai_list_models.sh
src/: alternate_text_window.rs  img_to_ai.rs  text_to_ai.rs
