[package]
name = "ai-screenshot-describer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
eframe = "0.29.0"
reqwest = { version="0.12.24", features = ["json"] }
serde = { version ="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"] } # feature full includes "main" macro 


[[bin]]
name = "text-to-ai"
path = "src/text_to_ai.rs"

[[bin]]
name = "img-to-ai"
path = "src/img_to_ai.rs"

[[bin]]
name = "alternate-window"
path = "src/alternate_text_window.rs"
